search Activity 구현
근데 아직 잘 몰게써

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
         <item> Placehodler text 1 </item>
         <item> Placehodler text 2 </item>
     </string-array>
+    <string name="hint">hint</string>
 </resources>
